# sprite-studio

./: .env_example  .gitignore  README.md  UI_COMPONENT_INVENTORY.md  pyproject.toml  supabase_schema.sql
backend/: __init__.py  api_server.py  game_asset_app.py  game_asset_generator.py  gradio_animation.py  gradio_config_management.py  gradio_event_handlers.py  gradio_generation_interfaces.py  gradio_helpers.py  gradio_prompt_previews.py  gradio_styles.py  gradio_ui_components.py  pixel_character_generator.py  supabase_client.py
data/configs/: saved_configs.json
docs/: ui_inventory.md
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @supabase.js  @swc.js  next.js  tslib.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/webpack/: webpack.3f08fc8595216820.hot-update.js  webpack.870598e42ad317d3.hot-update.js  webpack.9bb1e0a8b7832dee.hot-update.js
frontend/.next/types/app/: layout.ts  page.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/studio/: page.tsx
frontend/components/: Header.tsx  Hero.tsx  HybridIframe.tsx  StudioApp.tsx
frontend/lib/: supabase.ts
(+11 files in other folders)
